Mon Jul  3 17:32:51 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed a bug in apitest - the nullquery1() test was in the wrong
	  list of tests (it _does_ depend on a backend) and wasn't really
	  strict enough (so still passed with a void database).

Mon Jul  3 16:04:05 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* testsuite.cc wasn't compiling with debug disabled.

Mon Jul  3 15:18:55 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Implemented InMemoryPostList::get_position_list()

	* SleepyPositionList is now replaced by an InMemoryPostList -
	  implementation is same, only difference is where the initialising
	  values come from.

Mon Jul  3 14:28:06 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed ProgClient's destructor (was throwing an exception duplicating
	  work being done elsewhere, causing an abort under some circumstances.)

Mon Jul  3 14:11:23 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed stemtest so that it now works with the swedish data set.

Mon Jul  3 13:51:53 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix fake memory leak being reported in some conditions, due to
	  failure to initialise the debug object fully before starting the
	  testsuite.

	* Run phrase and near tests on each backend, but fail.  Inmemory to
	  be fixed in a moment: network failure doesn't matter yet, but
	  should be fixed soon.

Mon Jul  3 12:38:11 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Change some FIXME's to \todo's - the new doxygen tag.  This should
	  be used in most situations where we used to use FIXME, now.

Mon Jul  3 12:29:10 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added get_description() methods to all API objects, returning
	  a human readable description of the contents of the object.

	* Added output operators for API objects, so that you can do
	  "cout << omenquire;"
