@@ -31,16 +31,22 @@
 /// Base class for all errors reported
 class OmError {
     private:
+	/// A message explaining the error.
         string msg;
+
+	/** The type of the error.
+	 */
+	string type;
 
 	/// assignment operator private and unimplemented
 	void operator=(const OmError &copyme);
     protected:
-    	/** constructors are protected, since they can only
-	 * be used by derived classes anyway.
+    	/** Constructors are protected, since they can only
+	 *  be used by derived classes anyway.
 	 */
-        OmError(const string &error_msg) : msg(error_msg) { }
-	OmError(const OmError &copyme) : msg(copyme.msg) {}
+        OmError(const string &msg_, const string &type_)
+		: msg(msg_), type(type_) {}
+	OmError(const OmError &copyme) : msg(copyme.msg), type(copyme.type) {}
     public:
 	/** Return a message describing the error.
 	 *  This is in a human readable form.
@@ -50,111 +56,91 @@ class OmError {
             return msg;
         }
 
+	/** Return the type of the error.
+	 */
+	string get_type() const
+	{
+	    return type;
+	}
+
         /// Instantiations of OmError (as opposed to subclasses) are forbidden
 	virtual ~OmError() = 0;
 };
 
-
 inline OmError::~OmError() {}
+
+#define DEFINE_ERROR_BASECLASS(a, b) \
+class a : public b { \
+    protected: \
+	/** Constructor used by derived classes. */ \
+	a(const string &msg_, const string &type_) : b(msg_, type_) {}; \
+}
+
+#define DEFINE_ERROR_CLASS(a, b) \
+class a : public b { \
+    public: \
+	/** Constructor used publically. */ \
+	a(const string &msg_) : b(msg_, #a) {}; \
+    protected: \
+	/** Constructor used by derived classes. */ \
+	a(const string &msg_, const string &type_) : b(msg_, type_) {}; \
+}
 
 /** Base class for errors due to programming errors.
  *  An exception derived from OmLogicError is thrown when a misuse
  *  of the API is detected.
  */
-class OmLogicError : public OmError {
-    protected:
-        OmLogicError(const string &msg) : OmError(msg) {};
-};
+DEFINE_ERROR_BASECLASS(OmLogicError, OmError);
 
 /** Base class for errors due to run time problems.
  *  An exception derived from OmRuntimeError is thrown when an
  *  error is caused by problems with the data or environment rather
  *  than a programming mistake.
  */
-class OmRuntimeError : public OmError {
-    protected:
-        OmRuntimeError(const string &msg) : OmError(msg) {};
-};
+DEFINE_ERROR_BASECLASS(OmRuntimeError, OmError);
 
 /** Thrown if an internal consistency check fails.
  *  This represents a bug in Muscat. */
-class OmAssertionError : public OmLogicError {
-    public:
-	OmAssertionError(const string &msg)
-		: OmLogicError(msg + " - assertion failed") {};
-};
+DEFINE_ERROR_CLASS(OmAssertionError, OmLogicError);
 
 /** Thrown when an attempt to use an unimplemented feature is made. */
-class OmUnimplementedError : public OmLogicError {
-    public:
-        OmUnimplementedError(const string &msg) : OmLogicError(msg) {};
-};
+DEFINE_ERROR_CLASS(OmUnimplementedError, OmLogicError);
 
 /** Thrown when an invalid argument is supplied to the API. */
-class OmInvalidArgumentError : public OmLogicError {
-    public:
-        OmInvalidArgumentError(const string &msg) : OmLogicError(msg) {};
-};
+DEFINE_ERROR_CLASS(OmInvalidArgumentError, OmLogicError);
 
 /** Thrown when an attempt is made to access a document which is not in the
  *  database.  This could occur either due to a programming error, or
  *  because the database has changed since running the query. */
-class OmDocNotFoundError : public OmRuntimeError {
-    public:
-	OmDocNotFoundError(const string &msg) : OmRuntimeError(msg) {};
-};
+DEFINE_ERROR_CLASS(OmDocNotFoundError, OmRuntimeError);
 
 /** thrown when an element is out of range. */
-class OmRangeError : public OmRuntimeError {
-    public:
-	OmRangeError(const string &msg) : OmRuntimeError(msg) {};
-};
+DEFINE_ERROR_CLASS(OmRangeError, OmRuntimeError);
 
 /** thrown when really weird stuff happens.  If this is thrown something
  *  has gone badly wrong.
  */
-class OmInternalError : public OmRuntimeError {
-    public:
-	OmInternalError(const string &msg) : OmRuntimeError(msg) {};
-};
+DEFINE_ERROR_CLASS(OmInternalError, OmRuntimeError);
 
 /** thrown for miscellaneous database errors. */
-class OmDatabaseError : public OmRuntimeError {
-    public:
-	OmDatabaseError(const string &msg) : OmRuntimeError(msg) {};
-};
+DEFINE_ERROR_CLASS(OmDatabaseError, OmRuntimeError);
 
 /** thrown when there is a communications problem with
  *  a remote database.
  */
-class OmNetworkError : public OmRuntimeError {
-    public:
-	OmNetworkError(const string &msg) : OmRuntimeError(msg) {};
-};
+DEFINE_ERROR_CLASS(OmNetworkError, OmRuntimeError);
 
 /** Thrown when a network timeout is exceeded 
  */
-class OmNetworkTimeoutError : public OmNetworkError {
-    public:
-	OmNetworkTimeoutError(const string &msg) : OmNetworkError(msg) {};
-};
+DEFINE_ERROR_CLASS(OmNetworkTimeoutError, OmNetworkError);
 
 /** Thrown when opening a database fails. */
-class OmOpeningError : public OmDatabaseError {
-    public:
-        OmOpeningError(const string &msg) : OmDatabaseError(msg) {};
-};
+DEFINE_ERROR_CLASS(OmOpeningError, OmDatabaseError);
 
 /** Thrown when gaining a lock on a database fails. */
-class OmDatabaseLockError : public OmDatabaseError {
-    public:
-        OmDatabaseLockError(const string &msg) : OmDatabaseError(msg) {};
-};
+DEFINE_ERROR_CLASS(OmDatabaseLockError, OmDatabaseError);
 
 /** Thrown when trying to access invalid data. */
-class OmInvalidResultError : public OmRuntimeError {
-    public:
-	OmInvalidResultError(const string &msg) : OmRuntimeError(msg) {};
-};
+DEFINE_ERROR_CLASS(OmInvalidResultError, OmRuntimeError);
 
 #endif /* OM_HGUARD_ERROR_H */
